removed fixed footer on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,7 @@ hr {
     border: none;
 }
 
-.navbar{
+.navbar {
     background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
@@ -150,8 +150,7 @@ footer {
     color: rgb(200, 40, 120);
 }
 
-
-.navbar-toggler{
+.navbar-toggler {
     padding: 0;
 }
 
@@ -212,7 +211,7 @@ a {
     cursor: pointer;
 }
 
-.animated-icon span{
+.animated-icon span {
     display: block;
     position: absolute;
     height: 3px;
@@ -237,37 +236,48 @@ a {
 .animated-icon span:nth-child(1) {
     top: 0px;
 }
-.animated-icon span:nth-child(2), .animated-icon span:nth-child(3) {
+
+.animated-icon span:nth-child(2),
+.animated-icon span:nth-child(3) {
     top: 10px;
 }
+
 .animated-icon span:nth-child(4) {
     top: 20px;
 }
+
 .animated-icon.open span:nth-child(1) {
     top: 11px;
     width: 0%;
     left: 50%;
 }
+
 .animated-icon.open span:nth-child(2) {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+
 .animated-icon.open span:nth-child(3) {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
     -o-transform: rotate(-45deg);
     transform: rotate(-45deg);
 }
+
 .animated-icon.open span:nth-child(4) {
     top: 11px;
     width: 0%;
     left: 50%;
 }
 
+
 /* Code taken from */
+
+
 /* https://mdbootstrap.com/docs/b4/jquery/navigation/hamburger-menu/ */
+
 
 /* Headings ------------------------------------------------------ */
 
@@ -309,6 +319,7 @@ h4 {
 .row>* {
     padding: 0;
 }
+
 
 /* Progress Bars ------------------------------------------------- */
 
@@ -407,9 +418,10 @@ li {
     margin-left: 5px;
 }
 
-#introduction{
+#introduction {
     margin-top: 100px;
 }
+
 
 /* Form ---------------------------------------------------------- */
 
@@ -458,4 +470,10 @@ li {
     border-radius: 4px;
     background-color: rgba(53, 53, 53, 0.733);
     -webkit-box: inset 0 0 6px rgb(81, 160, 153);
+}
+
+@media only screen and (max-width: 600px) {
+    .footer {
+        position: relative;
+    }
 }
